[package]
name = "tetris_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sdl2 = "0.36"
age = "0.9.2"
thiserror = "1.0.52"
flate2 = "1.0.28"